--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
             display: flex;
             align-items: center;
             flex-direction: column;
+            min-height: 90vh;
         }
+
         a {
             background-color: black;
             color: white;
@@ -20,6 +22,6 @@
 </head>
 <body>
     <a href="juegoMarioAEstrella/index.html">JUEGO MARIO BROS</a>
-    <a href="PROGRAMAS BUSQUEDAS/main.py"></a>
+    <a href="PROGRAMAS BUSQUEDAS/main.py">PROGRAMAS DE BUSQUEDA EN FLASK</a>
 </body>
 </html>
