--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             align-items: center;
             flex-direction: column;
             min-height: 90vh;
+            gap: 30px;
         }
 
         a {
