--- a/juegoMarioAEstrella/index.html
+++ b/juegoMarioAEstrella/index.html
@@ -33,6 +33,7 @@
         <div id="campoNodo">
             <h4 class="tittle">Nodo</h4>
             <div id="Nodo" class=""></div>
+            <div class="mario"></div>
         </div>
 
         <div id="campoRuta">
