--- a/juegoMarioAEstrella_test/index.html
+++ b/juegoMarioAEstrella_test/index.html
@@ -44,6 +44,6 @@
         </div>
 
     </div>
-    <script src="scriptAestrella.js"></script>
+    <script src="scriptMario.js"></script>
 </body>
 </html>
