--- a/juegoMarioAEstrella/index.html
+++ b/juegoMarioAEstrella/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <div class="body_busqueda">
+        <audio id="sonido" autoplay>
+            <source src="yt1s.com - Super Mario Bros Soundtrack.mp3" type="audio/mpeg">
+        </audio>
         
         <div id="campoGrid">
             <h4 class="tittle">Juego</h4>
@@ -44,6 +47,6 @@
         </div>
 
     </div>
-    <script src="scriptAestrella.js"></script>
+    <script src="scriptAestrellaMario.js"></script>
 </body>
 </html>
