--- a/juegoMarioAEstrella/index.html
+++ b/juegoMarioAEstrella/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <div class="body_busqueda">
-        <audio id="sonido" autoplay>
-            <source src="yt1s.com - Super Mario Bros Soundtrack.mp3" type="audio/mpeg">
+        <audio id="sonido" loop>
+            <source src="aud/yt1s.com - Super Mario Bros Soundtrack.mp3" type="audio/mpeg">
         </audio>
         
         <div id="campoGrid">
