Respaldo, Falta mejorar Prolog Muros

--- a/Sistema Experto/backup/index.html
+++ b/Sistema Experto/backup/index.html
@@ -6,8 +6,6 @@
     <link rel="shortcut icon" href="img/2d-mario-running.gif" type="image/x-icon">
     <title>Mario A* y Enemigo Sistema Experto</title>
     <link rel="stylesheet" href="css/style.css">
-    <!-- <script src="https://cdn.jsdelivr.net/npm/tau-prolog@1.0.0/tau-prolog.min.js"></script> -->
-
 </head>
 <body>
     <div class="body_busqueda">
@@ -27,33 +25,15 @@
             <div id="ruta">
             </div>
         </div>
-        <div class="cuadroTexto" id="campoAcciones">
-            <h4 class="tittle">Acciones</h4>
+        <div id="campoAcciones">
+            <h4 class="tittle">Acciones NPC</h4>
             <div id="cuadro_acciones">
                 <div id="acciones">
                 </div>
             </div>
         </div>
-        <div class="cuadroTexto" id="campoOutput">
-            <h4 class="tittle">Output</h4>
-            <div id="cuadro_output">
-                <div id="output">
-                </div>
-                <div id="hechos">
-                </div>
-            </div>
-        </div>        
-        <div class="cuadroTexto" id="campoConsola">
-            <h4 class="tittle">Consola</h4>
-            <div id="cuadro_consola">
-                <div id="consola">
-                </div>
-            </div>
-        </div>
     </div>
 
-    <script type="text/javascript" src="tau-prolog.min.js"></script>
     <script src="sistema_experto.js"></script>
-
 </body>
 </html>
